Fix SendGrid Mail Sending on Production
Why?
When a customer creates an account
A welcome message should be sent to the user's mail

How?
set the host default url option to the heroku app staging url

https://www.pivotaltracker.com/story/show/111533858
[#111533858]

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "getmyshop",
   "scripts": {
-    "postdeploy": "bundle exec rake db:migrate"
+    "postdeploy": "bundle exec rake db:migrate && bundle exec rake db:seed"
   },
   "env": {
   },
